<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MultiRonda</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_name">Usuário</string>
    <string name="login_password">Senha</string>
    <string name="button_login">Login</string>
    <string name="button_escolherRonda">Selecionar ronda</string>
    <string name="button_proximoPonto">Iniciar Ronda</string>
    <string name="button_descarregarRota">Descarregar</string>
    <string name="button_enviaPonto">Envia Ponto</string>
    <string name="title_activity_main">MultiRonda</string>
    <string name="title_activity_escolha_ronda">Escolha ronda</string>
    <string name="title_activity_executa_ronda">Inicia a ronda</string>
    <string name="title_activity_descarregar_ronda">DescarregarRonda</string>
    <string name="descarregar_ronda">Clique ao lado quando estiver conectado na base</string>
    <string name="button_descarregaRota">Finalizar ronda</string>
    <string name="title_activity_activity_opera_gps">ActivityOperaGPS</string>

</resources>